--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+    <head>
+        <base href="index.html" target="_blank">
+        <title>apmanda's webpage!</title>
+        <meta charset="utf-8">
+        <meta name="author" content="Mands">
+        <meta name="description" content="This is my home page!">
+        <meta name="keywords" content="apmanda, art, personal">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    </head>
+    <body>
+        <h1>Hello World</h1>
+        <p>I'm hosted with GitHub Pages.</p>
+    </body>
 </html>
