--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <base href="index.html" target="_blank">
         <title>apmanda's webpage!</title>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abril+Fatface|Poppins">
         <link rel="stylesheet" href="basecss.css">
         <meta charset="utf-8">
         <meta name="author" content="Mands">
@@ -11,16 +12,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <header>
-            <h1>Amanda Barnes</h1>
+        <div id="nav_bar">
+            <h1 id="myname">A.P. Barnes</h1>
             <nav>
-                <a href="">Home</a> | 
-                <a href="">Projects</a> | 
-                <a href="">About</a> | 
-                <a href="">Contact</a>
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Projects</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
             </nav>
-        </header>
-        <div class="main">
+        </div>
+
+        <div id="main">
             <div>
                 <img src="" alt="no image here" width="200px" height="100px" class="cover">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Enim sit amet venenatis urna cursus. Aenean vel elit scelerisque mauris pellentesque pulvinar pellentesque. Eu volutpat odio facilisis mauris. Venenatis a condimentum vitae sapien pellentesque habitant morbi. Nibh mauris cursus mattis molestie a iaculis at erat. Nisi scelerisque eu ultrices vitae auctor. Purus viverra accumsan in nisl nisi. Turpis cursus in hac habitasse. Consectetur lorem donec massa sapien faucibus. Scelerisque eleifend donec pretium vulputate. Enim facilisis gravida neque convallis a. At auctor urna nunc id. Dis parturient montes nascetur ridiculus mus mauris vitae ultricies leo. Tempus imperdiet nulla malesuada pellentesque elit eget. Ut ornare lectus sit amet est placerat in egestas. Nam aliquam sem et tortor consequat id porta nibh.</p>
