--- a/dailies.html
+++ b/dailies.html
@@ -69,7 +69,7 @@
                 background: none;
                 padding: 15px 10px;
             }
-            @media screen and (max-width: 650px) {
+            @media screen and (max-width: 840px) {
                 #navbar { display: none; }
                 #mobnav { display: block; }
             }
@@ -111,8 +111,8 @@
             }
             .bx a img {
                 border: 2px solid #eafffb;
-                width: 100px;
-                height: 100px;
+                width: 80px;
+                height: 80px;
             }
             .bx a:hover img {
                 border: 2px solid #88dde0;
@@ -202,6 +202,11 @@
         <div class="main" style="position: absolute;">
             <h1>My Dailies</h1>
             <div id="mobnav">
+                <div class="bx" style="position: relative; width: 50%; max-width: 369px; min-width: 180px; padding: 10px 0px;">
+                    <a href="https://account.neopets.com/classic/login" target="_blank">
+                       ~ Login ~
+                    </a>
+                </div><br>
                 <div class="bx" style="position: relative;">
                     <a href="https://www.neopets.com/home" target="_blank">
                        Pet Hub
@@ -226,43 +231,43 @@
                 </div>
                 <div class="bx" style="position: relative;">
                     <a href="https://www.neopets.com/questlog/" target="_blank">
-                        <img src="https://images.neopets.com/items/gro_mynci_hairgel.gif"><br>
+                        <img src="https://images.neopets.com/items/toy_hannah_action.gif"><br>
                         Quests
                     </a>
                 </div>
                 <div class="bx" style="position: relative;">
                     <a href="https://www.neopets.com/pirates/academy.phtml?type=status" target="_blank">
-                        <img src="https://images.neopets.com/items/gro_mynci_hairgel.gif"><br>
+                        <img src="https://images.neopets.com/items/plu_capn_threelegs.gif"><br>
                         Pirate Academy
                     </a>
                 </div>
                 <div class="bx" style="position: relative;">
                     <a href="https://www.neopets.com/halloween/gravedanger/index.phtml" target="_blank">
-                        <img src="https://images.neopets.com/items/gro_mynci_hairgel.gif"><br>
+                        <img src="https://images.neopets.com/items/sta_gd_grave_danger.gif"><br>
                         Grave Danger
                     </a>
                 </div>
                 <div class="bx" style="position: relative;">
                     <a href="https://www.neopets.com/faerieland/springs.phtml" target="_blank">
-                        <img src="https://images.neopets.com/items/gro_mynci_hairgel.gif"><br>
+                        <img src="https://images.neopets.com/items/toy_faerie_water.gif"><br>
                         Healing Springs
                     </a>
                 </div>
                 <div class="bx" style="position: relative;">
                     <a href="hhttps://www.neopets.com/quickstock.phtml" target="_blank">
-                        <img src="https://images.neopets.com/items/gro_mynci_hairgel.gif"><br>
+                        <img src="https://images.neopets.com/items/sch_clipboard_blue.gif"><br>
                         Quick Stock
                     </a>
                 </div>
                 <div class="bx" style="position: relative;">
                     <a href="https://www.neopets.com/inventory.phtml" target="_blank">
-                        <img src="https://images.neopets.com/items/gro_mynci_hairgel.gif"><br>
+                        <img src="https://images.neopets.com/items/toy_y20haltot_lunartemple.gif"><br>
                         Inventory
                     </a>
                 </div>
                 <div class="bx" style="position: relative;">
                     <a href="https://www.neopets.com/safetydeposit.phtml" target="_blank">
-                        <img src="https://images.neopets.com/items/gro_mynci_hairgel.gif"><br>
+                        <img src="https://images.neopets.com/items/ppph_treasurechest.gif"><br>
                         SDB
                     </a>
                 </div>
