--- a/dailies.html
+++ b/dailies.html
@@ -176,7 +176,7 @@
                 <li style="position: relative;"><a href="https://www.neopets.com/tvw/" target="_blank">TVW Hub</a>
                 <ul class="nhover" style="position: absolute;border-radius: 0 0 10px 10px;">
                     <li><a href="https://www.neopets.com/hospital/volunteer.phtml" target="_blank">Shifts</a></li>
-                    <li><a href="https://www.neopets.com/explore" target="_blank">Essence</a></li>
+                    <li><a href="https://sunnyneo.com/plots/void/activities.php#essencelocation" target="_blank">Essence</a></li>
                     <li><a href="https://www.neopets.com/dome/barracks.phtml" target="_blank">Battles</a></li>
                 </ul></li>
                 <li style="position: relative;"><a href="https://www.neopets.com/settings/profile/" target="_blank">My Account</a>
@@ -224,7 +224,7 @@
                     </a>
                 </div>
                 <div class="bx" style="position: relative;">
-                    <a href="https://www.neopets.com/trudys_surprise.phtml" target="_blank">
+                    <a href="https://sunnyneo.com/plots/void/activities.php#essencelocation" target="_blank">
                         <img src="https://sunnyneo.com/plots/void/voidessence.png"><br>
                         Essences
                     </a>
@@ -368,7 +368,7 @@
                     </a><br><br>
                     <div class="tip" style="position: relative;">
                         <div class="tipbx" style="position: absolute;">
-                            Once per day - <a href="" target="_blank">Answer</a>
+                            Once per day - <a href="https://www.sunnyneo.com/dailies.php" target="_blank">Answer</a>
                         </div>
                     </div>
                 </div>
