--- a/dailies.html
+++ b/dailies.html
@@ -149,6 +149,35 @@
             .tip:hover .tipbx {
                 display: inline-block;
             }
+            
+            .bx2 {
+                background-color: #fff;
+                border: 1px solid #217775;
+                text-align: center;
+                display: inline-block;
+                width: 138px;
+                padding: 20px 0px;
+                margin: 4px 2px;
+            }
+            .bx2:hover { 
+                background-color: #f4fffc;
+            }
+            .bx2 a {
+                color: #288e8e;
+                text-decoration: none;
+            }
+            .bx2 a:hover {
+                color: #1aacb2;
+            }
+            .bx2 a img {
+                border: 2px solid #eafffb;
+                width: 80px;
+                height: 80px;
+            }
+            .bx2 a:hover img {
+                border: 2px solid #88dde0;
+            }
+            
             h1 {
                 background-color: #a4cecd;
                 color: #217775;
@@ -202,73 +231,84 @@
         <div class="main" style="position: absolute;">
             <h1>My Dailies</h1>
             <div id="mobnav">
-                <div class="bx" style="position: relative; width: 50%; max-width: 369px; min-width: 180px; padding: 10px 0px;">
+                <div class="bx2" style="position: relative;">
                     <a href="https://account.neopets.com/classic/login" target="_blank">
-                       ~ Login ~
+                       Neopass Launch
                     </a>
-                </div><br>
-                <div class="bx" style="position: relative;">
+                </div>
+                <div class="bx2" style="position: relative;">
                     <a href="https://www.neopets.com/home" target="_blank">
                        Pet Hub
                     </a>
-                </div>
-                <div class="bx" style="position: relative;">
+                </div><br>
+                <div class="bx2" style="position: relative;">
                     <a href="https://www.neopets.com/tvw/" target="_blank">
                         TVW Hub
                     </a>
+                </div>
+                <div class="bx2" style="position: relative;">
+                    <a href="https://www.neopets.com/tvw/" target="_blank">
+                        Barracks
+                    </a>
                 </div><br>
-                <div class="bx" style="position: relative;">
+                <div class="bx2" style="position: relative;">
                     <a href="https://www.neopets.com/hospital/volunteer.phtml" target="_blank">
                         <img src="https://images.neopets.com/items/plu_blumaroo_doctor.gif"><br>
                         Hospital Shifts
                     </a>
                 </div>
-                <div class="bx" style="position: relative;">
+                <div class="bx2" style="position: relative;">
                     <a href="https://sunnyneo.com/plots/void/activities.php#essencelocation" target="_blank">
                         <img src="https://sunnyneo.com/plots/void/voidessence.png"><br>
                         Essences
                     </a>
                 </div>
-                <div class="bx" style="position: relative;">
+                <div class="bx2" style="position: relative;">
                     <a href="https://www.neopets.com/questlog/" target="_blank">
                         <img src="https://images.neopets.com/items/toy_hannah_action.gif"><br>
                         Quests
                     </a>
                 </div>
-                <div class="bx" style="position: relative;">
+                <div class="bx2" style="position: relative;">
                     <a href="https://www.neopets.com/pirates/academy.phtml?type=status" target="_blank">
                         <img src="https://images.neopets.com/items/plu_capn_threelegs.gif"><br>
                         Pirate Academy
                     </a>
                 </div>
-                <div class="bx" style="position: relative;">
+                <div class="bx2" style="position: relative;">
                     <a href="https://www.neopets.com/halloween/gravedanger/index.phtml" target="_blank">
                         <img src="https://images.neopets.com/items/sta_gd_grave_danger.gif"><br>
                         Grave Danger
                     </a>
                 </div>
-                <div class="bx" style="position: relative;">
-                    <a href="https://www.neopets.com/faerieland/springs.phtml" target="_blank">
-                        <img src="https://images.neopets.com/items/toy_faerie_water.gif"><br>
-                        Healing Springs
+                <div class="bx2" style="position: relative;">
+                    <a href="https://www.neopets.com/stockmarket.phtml?type=list&bargain=true" target="_blank">
+                        <img src="https://images.neopets.com/games/game_stocks.gif"><br>
+                        Bargain Stocks
                     </a>
                 </div>
-                <div class="bx" style="position: relative;">
-                    <a href="hhttps://www.neopets.com/quickstock.phtml" target="_blank">
+                <div class="bx2" style="position: relative;">
+                    <a href="https://www.neopets.com/quickstock.phtml" target="_blank">
                         <img src="https://images.neopets.com/items/sch_clipboard_blue.gif"><br>
                         Quick Stock
                     </a>
                 </div>
-                <div class="bx" style="position: relative;">
+                <div class="bx2" style="position: relative;">
                     <a href="https://www.neopets.com/inventory.phtml" target="_blank">
                         <img src="https://images.neopets.com/items/toy_y20haltot_lunartemple.gif"><br>
                         Inventory
                     </a>
                 </div>
-                <div class="bx" style="position: relative;">
+                <div class="bx2" style="position: relative;">
                     <a href="https://www.neopets.com/safetydeposit.phtml" target="_blank">
                         <img src="https://images.neopets.com/items/ppph_treasurechest.gif"><br>
                         SDB
+                    </a>
+                </div>
+                <div class="bx2" style="position: relative;">
+                    <a href="https://www.neopets.com/faerieland/springs.phtml" target="_blank">
+                        <img src="https://images.neopets.com/items/toy_faerie_water.gif"><br>
+                        Healing Springs
                     </a>
                 </div>
             </div>
@@ -457,17 +497,6 @@
                     <div class="tip" style="position: relative;">
                         <div class="tipbx" style="position: absolute;">
                             Every 6hrs; Costs 100nps
-                        </div>
-                    </div>
-                </div>
-                <div class="bx" style="position: relative;">
-                    <a href="https://www.neopets.com/halloween/scratch.phtml" target="_blank">
-                        <img src="https://images.neopets.com/items/toy_plushie_sssidney.gif"><br>
-                        Scratchcard - DF
-                    </a><br><br>
-                    <div class="tip" style="position: relative;">
-                        <div class="tipbx" style="position: absolute;">
-                            Every 2hrs; Costs 1200nps
                         </div>
                     </div>
                 </div>
