--- a/dailies.html
+++ b/dailies.html
@@ -71,6 +71,7 @@
             }
             @media screen and (max-width: 840px) {
                 #navbar { display: none; }
+                #neopass { display: none; }
                 #mobnav { display: block; }
             }
 
@@ -230,6 +231,9 @@
 
         <div class="main" style="position: absolute;">
             <h1>My Dailies</h1>
+            <div id="neopass" class="bx" style="min-width: 752px;">
+                <a href="https://account.neopets.com/classic/login" target="_blank">Neopass Login Launch</a>
+            </div>
             <div id="mobnav">
                 <div class="bx2" style="position: relative;">
                     <a href="https://account.neopets.com/classic/login" target="_blank">
