--- a/dailies.html
+++ b/dailies.html
@@ -251,8 +251,8 @@
                     </a>
                 </div>
                 <div class="bx2" style="position: relative;">
-                    <a href="https://www.neopets.com/tvw/" target="_blank">
-                        Barracks
+                    <a href="https://www.neopets.com/dome/barracks.phtml" target="_blank">
+                        Battles
                     </a>
                 </div><br>
                 <div class="bx2" style="position: relative;">
