--- a/dailies.html
+++ b/dailies.html
@@ -206,7 +206,7 @@
                 <li style="position: relative;"><a href="https://www.neopets.com/tvw/" target="_blank">TVW Hub</a>
                 <ul class="nhover" style="position: absolute;border-radius: 0 0 10px 10px;">
                     <li><a href="https://www.neopets.com/hospital/volunteer.phtml" target="_blank">Shifts</a></li>
-                    <li><a href="https://sunnyneo.com/plots/void/activities.php#essencelocation" target="_blank">Essence</a></li>
+                    <li><a href="https://sunnyneo.com/plots/void/voidessence.php" target="_blank">Essence</a></li>
                     <li><a href="https://www.neopets.com/dome/barracks.phtml" target="_blank">Battles</a></li>
                 </ul></li>
                 <li style="position: relative;"><a href="https://www.neopets.com/settings/profile/" target="_blank">My Account</a>
@@ -262,15 +262,9 @@
                     </a>
                 </div>
                 <div class="bx2" style="position: relative;">
-                    <a href="https://sunnyneo.com/plots/void/activities.php#essencelocation" target="_blank">
+                    <a href="https://sunnyneo.com/plots/void/voidessence.php" target="_blank">
                         <img src="https://sunnyneo.com/plots/void/voidessence.png"><br>
                         Essences
-                    </a>
-                </div>
-                <div class="bx2" style="position: relative;">
-                    <a href="https://www.neopets.com/questlog/" target="_blank">
-                        <img src="https://images.neopets.com/items/toy_hannah_action.gif"><br>
-                        Quests
                     </a>
                 </div>
                 <div class="bx2" style="position: relative;">
@@ -286,9 +280,15 @@
                     </a>
                 </div>
                 <div class="bx2" style="position: relative;">
-                    <a href="https://www.neopets.com/stockmarket.phtml?type=list&bargain=true" target="_blank">
+                    <a href="https://www.neopets.com/questlog/" target="_blank">
+                        <img src="https://images.neopets.com/items/toy_hannah_action.gif"><br>
+                        Quests
+                    </a>
+                </div>
+                <div class="bx2" style="position: relative;">
+                    <a href="https://www.neopets.com/stockmarket.phtml?type=portfolio" target="_blank">
                         <img src="https://images.neopets.com/games/game_stocks.gif"><br>
-                        Bargain Stocks
+                        Stock Portfolio
                     </a>
                 </div>
                 <div class="bx2" style="position: relative;">
@@ -298,15 +298,15 @@
                     </a>
                 </div>
                 <div class="bx2" style="position: relative;">
-                    <a href="https://www.neopets.com/inventory.phtml" target="_blank">
-                        <img src="https://images.neopets.com/items/toy_y20haltot_lunartemple.gif"><br>
-                        Inventory
-                    </a>
-                </div>
-                <div class="bx2" style="position: relative;">
                     <a href="https://www.neopets.com/safetydeposit.phtml" target="_blank">
                         <img src="https://images.neopets.com/items/ppph_treasurechest.gif"><br>
                         SDB
+                    </a>
+                </div>
+                <div class="bx2" style="position: relative;">
+                    <a href="https://www.neopets.com/inventory.phtml" target="_blank">
+                        <img src="https://images.neopets.com/items/toy_y20haltot_lunartemple.gif"><br>
+                        Inventory
                     </a>
                 </div>
                 <div class="bx2" style="position: relative;">
