--- a/dailies.html
+++ b/dailies.html
@@ -234,6 +234,8 @@
             <div id="neopass" class="bx" style="min-width: 752px;">
                 <a href="https://account.neopets.com/classic/login" target="_blank">Neopass Login Launch</a>
             </div>
+            
+            <!-- mobile top nav -->
             <div id="mobnav">
                 <div class="bx2" style="position: relative;">
                     <a href="https://account.neopets.com/classic/login" target="_blank">
@@ -244,10 +246,20 @@
                     <a href="https://www.neopets.com/home" target="_blank">
                        Pet Hub
                     </a>
-                </div><br>
+                </div>
+                <div class="bx2" style="position: relative;">
+                    <a href="https://www.neopets.com/bank.phtml" target="_blank">
+                        Bank
+                    </a>
+                </div>
                 <div class="bx2" style="position: relative;">
                     <a href="https://www.neopets.com/tvw/" target="_blank">
                         TVW Hub
+                    </a>
+                </div>
+                <div class="bx2" style="position: relative;">
+                    <a href="https://sunnyneo.com/plots/void/voidessence.php" target="_blank">
+                        Essences
                     </a>
                 </div>
                 <div class="bx2" style="position: relative;">
@@ -261,10 +273,10 @@
                         Hospital Shifts
                     </a>
                 </div>
-                <div class="bx2" style="position: relative;">
-                    <a href="https://sunnyneo.com/plots/void/voidessence.php" target="_blank">
-                        <img src="https://sunnyneo.com/plots/void/voidessence.png"><br>
-                        Essences
+                <div class="bx2" style="position: relative">
+                    <a href="https://www.neopets.com/halloween/strtest/index.phtml" target="_blank">
+                        <img src="https://images.neopets.com/items/gar_testyourstrength.gif"><br>
+                        Test Your Strength
                     </a>
                 </div>
                 <div class="bx2" style="position: relative;">
@@ -316,6 +328,8 @@
                     </a>
                 </div>
             </div>
+            
+            <!-- Main Body -->
             <div style="max-width: 1000px; margin: 0 auto;">
                 <div class="bx" style="position: relative;">
                     <a href="https://www.neopets.com/trudys_surprise.phtml" target="_blank">
@@ -325,6 +339,61 @@
                     <div class="tip" style="position: relative;">
                         <div class="tipbx" style="position: absolute;">
                             Once per day
+                        </div>
+                    </div>
+                </div>
+                <div class="bx" style="position: relative;">
+                    <a href="https://www.neopets.com/halloween/strtest/index.phtml" target="_blank">
+                        <img src="https://images.neopets.com/items/gar_testyourstrength.gif"><br>
+                        Test Your Strength
+                    </a><br><br>
+                    <div class="tip" style="position: relative;">
+                        <div class="tipbx" style="position: absolute;">
+                            Every 6hrs; Costs 100nps
+                        </div>
+                    </div>
+                </div>
+                <div class="bx" style="position: relative;">
+                    <a href="https://www.neopets.com/halloween/applebobbing.phtml" target="_blank">
+                        <img src="https://images.neopets.com/items/toy_applebob_game.gif"><br>
+                        Apple Bobbing
+                    </a><br><br>
+                    <div class="tip" style="position: relative;">
+                        <div class="tipbx" style="position: absolute;">
+                            Once per day - Risky
+                        </div>
+                    </div>
+                </div>
+                <div class="bx" style="position: relative;">
+                    <a href="https://www.neopets.com/prehistoric/mediocrity.phtml" target="_blank">
+                        <img src="https://images.neopets.com/wheels/new/tm_mediocrity.jpg"><br>
+                        Wheel of Mediocrity
+                    </a><br><br>
+                    <div class="tip" style="position: relative;">
+                        <div class="tipbx" style="position: absolute;">
+                            Every 40mins; Costs 100nps
+                        </div>
+                    </div>
+                </div>
+                <div class="bx" style="position: relative;">
+                    <a href="https://www.neopets.com/faerieland/wheel.phtml" target="_blank">
+                        <img src="https://images.neopets.com/items/sta_stw_wheelofexcitement.gif"><br>
+                        Wheel of Excitement
+                    </a><br><br>
+                    <div class="tip" style="position: relative;">
+                        <div class="tipbx" style="position: absolute;">
+                            Every 2hrs; Costs 500nps
+                        </div>
+                    </div>
+                </div>
+                <div class="bx" style="position: relative;">
+                    <a href="https://www.neopets.com/medieval/knowledge.phtml" target="_blank">
+                        <img src="https://images.neopets.com/items/toy_bv_wheelofknowledge.gif"><br>
+                        Wheel of Knowledge
+                    </a><br><br>
+                    <div class="tip" style="position: relative;">
+                        <div class="tipbx" style="position: absolute;">
+                            Once per day; Costs 400nps
                         </div>
                     </div>
                 </div>
@@ -362,6 +431,17 @@
                     </div>
                 </div>
                 <div class="bx" style="position: relative;">
+                    <a href="https://www.neopets.com/faerieland/tdmbgpop.phtml" target="_blank">
+                        <img src="https://images.neopets.com/items/clo_y19haltot_bluegrundo_hh.gif"><br>
+                        Discarded MBG Plushie
+                    </a><br><br>
+                    <div class="tip" style="position: relative;">
+                        <div class="tipbx" style="position: absolute;">
+                            Once per day
+                        </div>
+                    </div>
+                </div>
+                <div class="bx" style="position: relative;">
                     <a href="https://www.neopets.com/pirates/anchormanagement.phtml" target="_blank">
                         <img src="https://images.neopets.com/items/fur_pirate_anchor.gif"><br>
                         Anchor Management
@@ -384,39 +464,6 @@
                     </div>
                 </div>
                 <div class="bx" style="position: relative;">
-                    <a href="https://www.neopets.com/desert/shrine.phtml" target="_blank">
-                        <img src="https://images.neopets.com/items/stamp_desert_shrine.gif"><br>
-                        Coltzan's Shrine
-                    </a><br><br>
-                    <div class="tip" style="position: relative;">
-                        <div class="tipbx" style="position: absolute;">
-                            Once per 12hrs
-                        </div>
-                    </div>
-                </div>
-                <div class="bx" style="position: relative;">
-                    <a href="https://www.neopets.com/faerieland/tdmbgpop.phtml" target="_blank">
-                        <img src="https://images.neopets.com/items/clo_y19haltot_bluegrundo_hh.gif"><br>
-                        Discarded MBG Plushie
-                    </a><br><br>
-                    <div class="tip" style="position: relative;">
-                        <div class="tipbx" style="position: absolute;">
-                            Once per day
-                        </div>
-                    </div>
-                </div>
-                <div class="bx" style="position: relative;">
-                    <a href="https://www.neopets.com/community/index.phtml" target="_blank">
-                        <img src="https://images.neopets.com/items/book_bigpuzzles.gif"><br>
-                        Daily Puzzle
-                    </a><br><br>
-                    <div class="tip" style="position: relative;">
-                        <div class="tipbx" style="position: absolute;">
-                            Once per day - <a href="https://www.sunnyneo.com/dailies.php" target="_blank">Answer</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="bx" style="position: relative;">
                     <a href="https://www.neopets.com/water/fishing.phtml" target="_blank">
                         <img src="https://images.neopets.com/items/gar_fishing_meepit.gif"><br>
                         Fishing
@@ -424,6 +471,17 @@
                     <div class="tip" style="position: relative;">
                         <div class="tipbx" style="position: absolute;">
                             Random - Usually 12-24hrs tho
+                        </div>
+                    </div>
+                </div>
+                <div class="bx" style="position: relative;">
+                    <a href="https://www.neopets.com/desert/shrine.phtml" target="_blank">
+                        <img src="https://images.neopets.com/items/stamp_desert_shrine.gif"><br>
+                        Coltzan's Shrine
+                    </a><br><br>
+                    <div class="tip" style="position: relative;">
+                        <div class="tipbx" style="position: absolute;">
+                            Once per 12hrs
                         </div>
                     </div>
                 </div>
@@ -450,39 +508,6 @@
                     </div>
                 </div>
                 <div class="bx" style="position: relative;">
-                    <a href="https://www.neopets.com/games/giveaway/giveaway_game.phtml" target="_blank">
-                        <img src="https://images.neopets.com/items/bat_desert_scarab.gif"><br>
-                        Qasalan Expellibox *
-                    </a><br><br>
-                    <div class="tip" style="position: relative;">
-                        <div class="tipbx" style="position: absolute;">
-                            Once per day *FLASH
-                        </div>
-                    </div>
-                </div>
-                <div class="bx" style="position: relative;">
-                    <a href="https://www.neopets.com/shenkuu/neggcave/" target="_blank">
-                        <img src="https://images.neopets.com/items/gif_negg_goldgem.gif"><br>
-                        Negg Puzzle
-                    </a><br><br>
-                    <div class="tip" style="position: relative;">
-                        <div class="tipbx" style="position: absolute;">
-                            Once per day
-                        </div>
-                    </div>
-                </div>
-                <div class="bx" style="position: relative;">
-                    <a href="https://www.neopets.com/halloween/applebobbing.phtml" target="_blank">
-                        <img src="https://images.neopets.com/items/toy_applebob_game.gif"><br>
-                        Apple Bobbing
-                    </a><br><br>
-                    <div class="tip" style="position: relative;">
-                        <div class="tipbx" style="position: absolute;">
-                            Once per day - Risky
-                        </div>
-                    </div>
-                </div>
-                <div class="bx" style="position: relative;">
                     <a href="https://www.neopets.com/worlds/geraptiku/tomb.phtml" target="_blank">
                         <img src="https://images.neopets.com/items/toy_deserted_tomb.gif"><br>
                         Deserted Tomb
@@ -494,35 +519,24 @@
                     </div>
                 </div>
                 <div class="bx" style="position: relative;">
-                    <a href="https://www.neopets.com/halloween/strtest/index.phtml" target="_blank">
-                        <img src="https://images.neopets.com/items/gar_testyourstrength.gif"><br>
-                        Test Your Strength
+                    <a href="https://www.neopets.com/community/index.phtml" target="_blank">
+                        <img src="https://images.neopets.com/items/book_bigpuzzles.gif"><br>
+                        Daily Puzzle
                     </a><br><br>
                     <div class="tip" style="position: relative;">
                         <div class="tipbx" style="position: absolute;">
-                            Every 6hrs; Costs 100nps
+                            Once per day - <a href="https://www.sunnyneo.com/dailies.php" target="_blank">Answer</a>
                         </div>
                     </div>
                 </div>
                 <div class="bx" style="position: relative;">
-                    <a href="https://www.neopets.com/faerieland/wheel.phtml" target="_blank">
-                        <img src="https://images.neopets.com/items/sta_stw_wheelofexcitement.gif"><br>
-                        Wheel of Excitement
+                    <a href="https://www.neopets.com/shenkuu/neggcave/" target="_blank">
+                        <img src="https://images.neopets.com/items/gif_negg_goldgem.gif"><br>
+                        Negg Puzzle
                     </a><br><br>
                     <div class="tip" style="position: relative;">
                         <div class="tipbx" style="position: absolute;">
-                            Every 2hrs; Costs 500nps
-                        </div>
-                    </div>
-                </div>
-                <div class="bx" style="position: relative;">
-                    <a href="https://www.neopets.com/medieval/knowledge.phtml" target="_blank">
-                        <img src="https://images.neopets.com/items/toy_bv_wheelofknowledge.gif"><br>
-                        Wheel of Knowledge
-                    </a><br><br>
-                    <div class="tip" style="position: relative;">
-                        <div class="tipbx" style="position: absolute;">
-                            Once per day; Costs 400nps
+                            Once per day
                         </div>
                     </div>
                 </div>
@@ -556,6 +570,17 @@
                     <div class="tip" style="position: relative;">
                         <div class="tipbx" style="position: absolute;">
                             Once per day
+                        </div>
+                    </div>
+                </div>
+                <div class="bx" style="position: relative;">
+                    <a href="https://www.neopets.com/games/giveaway/giveaway_game.phtml" target="_blank">
+                        <img src="https://images.neopets.com/items/bat_desert_scarab.gif"><br>
+                        Qasalan Expellibox *
+                    </a><br><br>
+                    <div class="tip" style="position: relative;">
+                        <div class="tipbx" style="position: absolute;">
+                            Once every 8hrs *FLASH
                         </div>
                     </div>
                 </div>
