--- a/petsearch.html
+++ b/petsearch.html
@@ -26,7 +26,7 @@
     <a href="http://www.neopets.com/pound/adopt.phtml?search=Jennifer561" class="purge"><img src="http://pets.neopets.com/cpn/Jennifer561/1/1.png" title="Jennifer561"></a>
     
     <h2>In the Pound</h2>
-    <a href="http://www.neopets.com/pound/adopt.phtml?search=Forev_r" class="pound"><img src="http://pets.neopets.com/cpn/Forev_r/1/1.png" title="Forev_r"></a>
+    <a href="http://www.neopets.com/pound/adopt.phtml?search=BrandShei" class="pound"><img src="http://pets.neopets.com/cpn/BrandShei/1/1.png" title="BrandShei"></a>
     <a href="http://www.neopets.com/pound/adopt.phtml?search=Kometenliicht" class="pound"><img src="http://pets.neopets.com/cpn/Kometenliicht/1/1.png" title="Kometenliicht"></a>
     <a href="http://www.neopets.com/pound/adopt.phtml?search=SweetBabi4uAlwayz" class="pound"><img src="http://pets.neopets.com/cpn/SweetBabi4uAlwayz/1/1.png" title="SweetBabi4uAlwayz Y8"></a>
     <a href="http://www.neopets.com/pound/adopt.phtml?search=WendysChili" class="pound"><img src="http://pets.neopets.com/cpn/WendysChili/1/1.png" title="WendysChili"></a>
