--- a/petsearch.html
+++ b/petsearch.html
@@ -8,22 +8,16 @@
     <h2>Unavailable</h2>
     <a href="http://www.neopets.com/pound/adopt.phtml?search=Alieres" class="unavailable"><img src="http://pets.neopets.com/cpn/Alieres/1/1.png" title="Alieres"></a>
     <a href="http://www.neopets.com/pound/adopt.phtml?search=Aliana" class="unavailable"><img src="http://pets.neopets.com/cpn/Aliana/1/1.png" title="Aliana"></a>
-    <a href="http://www.neopets.com/pound/adopt.phtml?search=Akriana" class="unavailable"><img src="http://pets.neopets.com/cpn/Akriana/1/1.png" title="Akriana"></a>
-    <a href="http://www.neopets.com/pound/adopt.phtml?search=Jennifer_44" class="unavailable"><img src="http://pets.neopets.com/cpn/Jennifer_44/1/1.png" title="Jennifer_44"></a>
-    <a href="http://www.neopets.com/pound/adopt.phtml?search=Jennifer123" class="unavailable"><img src="http://pets.neopets.com/cpn/Jennifer123/1/1.png" title="Jennifer123"></a>
-    <a href="http://www.neopets.com/pound/adopt.phtml?search=Jennifer5678" class="unavailable"><img src="http://pets.neopets.com/cpn/Jennifer5678/1/1.png" title="Jennifer5678"></a>
-    <a href="http://www.neopets.com/pound/adopt.phtml?search=p0pst4r" class="unavailable"><img src="http://pets.neopets.com/cpn/p0pst4r/1/1.png" title="p0pst4r"></a>
-    <a href="http://www.neopets.com/pound/adopt.phtml?search=d3stinE" class="unavailable"><img src="http://pets.neopets.com/cpn/d3stinE/1/1.png" title="d3stinE"></a>
     <a href="http://www.neopets.com/pound/adopt.phtml?search=Shamanka" class="unavailable"><img src="http://pets.neopets.com/cpn/Shamanka/1/1.png" title="Shamanka"></a>
     <a href="http://www.neopets.com/pound/adopt.phtml?search=Priscilline" class="unavailable"><img src="http://pets.neopets.com/cpn/Priscilline/1/1.png" title="Priscilline"></a>
     <a href="http://www.neopets.com/pound/adopt.phtml?search=Priscillia" class="unavailable"><img src="http://pets.neopets.com/cpn/Priscillia/1/1.png" title="Priscillia"></a>
-    <a href="http://www.neopets.com/pound/adopt.phtml?search=Priscilia" class="unavailable"><img src="http://pets.neopets.com/cpn/Priscilia/1/1.png" title="Priscilia"></a>
 
     <h2>Might Be Purged</h2>
-    <a href="http://www.neopets.com/pound/adopt.phtml?search=khala" class="purge"><img src="http://pets.neopets.com/cpn/khala/1/1.png" title="khala"></a>
-    <a href="http://www.neopets.com/pound/adopt.phtml?search=roygabiv" class="purge"><img src="http://pets.neopets.com/cpn/roygabiv/1/1.png" title="roygabiv"></a>
+    <a href="http://www.neopets.com/pound/adopt.phtml?search=Akriana" class="purge"><img src="http://pets.neopets.com/cpn/Akriana/1/1.png" title="Akriana"></a>
     <a href="http://www.neopets.com/pound/adopt.phtml?search=Bizzel" class="purge"><img src="http://pets.neopets.com/cpn/Bizzel/1/1.png" title="Bizzel"></a>
-    <a href="http://www.neopets.com/pound/adopt.phtml?search=Jennifer561" class="purge"><img src="http://pets.neopets.com/cpn/Jennifer561/1/1.png" title="Jennifer561"></a>
+    <a href="http://www.neopets.com/pound/adopt.phtml?search=khala" class="purge"><img src="http://pets.neopets.com/cpn/khala/1/1.png" title="khala"></a>
+    <a href="http://www.neopets.com/pound/adopt.phtml?search=Priscilia" class="purge"><img src="http://pets.neopets.com/cpn/Priscilia/1/1.png" title="Priscilia"></a>
+    <a href="http://www.neopets.com/pound/adopt.phtml?search=roygabiv" class="purge"><img src="http://pets.neopets.com/cpn/roygabiv/1/1.png" title="roygabiv"></a>
     
     <h2>In the Pound</h2>
     <a href="http://www.neopets.com/pound/adopt.phtml?search=BrandShei" class="pound"><img src="http://pets.neopets.com/cpn/BrandShei/1/1.png" title="BrandShei"></a>
