--- a/petsearch.html
+++ b/petsearch.html
@@ -110,6 +110,7 @@
     <a href="http://www.neopets.com/pound/adopt.phtml?search=Giinji" class="untakenname"><img src="http://pets.neopets.com/cpn/Giinji/1/1.png" title="Giinji"></a>
     <a href="http://www.neopets.com/pound/adopt.phtml?search=Gingji" class="untakenname"><img src="http://pets.neopets.com/cpn/Gingji/1/1.png" title="Gingji"></a>
     <a href="http://www.neopets.com/pound/adopt.phtml?search=Gooffles" class="untakenname"><img src="http://pets.neopets.com/cpn/Gooffles/1/1.png" title="Gooffles"></a>
+    <a href="http://www.neopets.com/pound/adopt.phtml?search=Groffles" class="untakenname"><img src="http://pets.neopets.com/cpn/Groffles/1/1.png" title="Groffles"></a>
     <a href="http://www.neopets.com/pound/adopt.phtml?search=Gritzal" class="untakenname"><img src="http://pets.neopets.com/cpn/Gritzal/1/1.png" title="Gritzal"></a>
     
     <!-- H -->
