--- a/petsearch.html
+++ b/petsearch.html
@@ -15,6 +15,7 @@
     <h2>Might Be Purged</h2>
     <a href="http://www.neopets.com/pound/adopt.phtml?search=Akriana" class="purge"><img src="http://pets.neopets.com/cpn/Akriana/1/1.png" title="Akriana"></a>
     <a href="http://www.neopets.com/pound/adopt.phtml?search=Bizzel" class="purge"><img src="http://pets.neopets.com/cpn/Bizzel/1/1.png" title="Bizzel"></a>
+    <a href="http://www.neopets.com/pound/adopt.phtml?search=Groffles" class="purge"><img src="http://pets.neopets.com/cpn/Groffles/1/1.png" title="Groffles"></a>
     <a href="http://www.neopets.com/pound/adopt.phtml?search=khala" class="purge"><img src="http://pets.neopets.com/cpn/khala/1/1.png" title="khala"></a>
     <a href="http://www.neopets.com/pound/adopt.phtml?search=Priscilia" class="purge"><img src="http://pets.neopets.com/cpn/Priscilia/1/1.png" title="Priscilia"></a>
     <a href="http://www.neopets.com/pound/adopt.phtml?search=roygabiv" class="purge"><img src="http://pets.neopets.com/cpn/roygabiv/1/1.png" title="roygabiv"></a>
@@ -110,7 +111,6 @@
     <a href="http://www.neopets.com/pound/adopt.phtml?search=Giinji" class="untakenname"><img src="http://pets.neopets.com/cpn/Giinji/1/1.png" title="Giinji"></a>
     <a href="http://www.neopets.com/pound/adopt.phtml?search=Gingji" class="untakenname"><img src="http://pets.neopets.com/cpn/Gingji/1/1.png" title="Gingji"></a>
     <a href="http://www.neopets.com/pound/adopt.phtml?search=Gooffles" class="untakenname"><img src="http://pets.neopets.com/cpn/Gooffles/1/1.png" title="Gooffles"></a>
-    <a href="http://www.neopets.com/pound/adopt.phtml?search=Groffles" class="untakenname"><img src="http://pets.neopets.com/cpn/Groffles/1/1.png" title="Groffles"></a>
     <a href="http://www.neopets.com/pound/adopt.phtml?search=Gritzal" class="untakenname"><img src="http://pets.neopets.com/cpn/Gritzal/1/1.png" title="Gritzal"></a>
     
     <!-- H -->
