--- a/dailies.html
+++ b/dailies.html
@@ -218,6 +218,7 @@
                 <li style="position: relative;"><a href="https://www.neopets.com/home" target="_blank">My Pets</a>
                 <ul class="nhover" style="position: absolute;border-radius: 0 0 10px 10px;">
                     <li><a href="https://www.neopets.com/pirates/academy.phtml?type=status" target="_blank">Pirate Academy</a></li>
+                    <li><a href="https://www.neopets.com/island/training.phtml?type=status" target="_blank">Island Academy</a></li>
                     <li><a href="https://www.neopets.com/halloween/gravedanger/index.phtml" target="_blank">Grave Danger</a></li>
                 </ul></li>
                 <li style="position: relative;"><a href="https://www.neopets.com/inventory.phtml" target="_blank">Inventory</a>
@@ -283,6 +284,12 @@
                     <a href="https://www.neopets.com/pirates/academy.phtml?type=status" target="_blank">
                         <img src="https://images.neopets.com/items/plu_capn_threelegs.gif"><br>
                         Pirate Academy
+                    </a>
+                </div>
+                <div class="bx2" style="position: relative;">
+                    <a href="https://www.neopets.com/island/training.phtml?type=status" target="_blank">
+                        <img src="https://images.neopets.com/items/codestone11.gif"><br>
+                        Island Academy
                     </a>
                 </div>
                 <div class="bx2" style="position: relative;">
