two new pages for link dashboards

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <base href="index.html" target="_blank">
         <title>apmanda's webpage!</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abril+Fatface|Poppins">
-        <link rel="stylesheet" href="basecss.css">
+        <link rel="stylesheet" href="/stylesheets/basecss.css">
         <meta charset="utf-8">
         <meta name="author" content="Mands">
         <meta name="description" content="This is my home page!">
